--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,10 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/7e2ce3d588.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -76,7 +80,7 @@
         href="mailto:Avijustviki@gmail.com"
         class="email-link 💙💛 Front-end developer in Ukraine"
       >
-        Avijustviki@gmail.com
+        Avijustviki@gmail.com <i class="fa-brands fa-instagram"></i>
       </a>
     </div>
   </body>
