--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/7e2ce3d588.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
