--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="wrapper">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"> Viktoriia Semchyshyna </a>
@@ -82,6 +83,21 @@
       >
         Avijustviki@gmail.com <i class="fa-brands fa-instagram"></i>
       </a>
+      <div class="footer mt-4 text-center row justify-content-around">
+        <div class="name col-md-3 align-self-center">💛💙</div>
+        <div class="social col-md-3">
+          <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+          -
+          <a href="https://www.facebook.com/avijust.viki" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          -
+          <a href="https://github.com/VikiSemch/Portfolio-VikiSemch" target="_blank"><i class="fa-brands fa-github"></i></a>
+          -
+          <a href="https://www.linkedin.com/in/vikisemch" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <div class="developer col-md-3 align-self-center">
+          Viktoriia Semchyshyna
+        </div>
+    </div>
     </div>
   </body>
 </html>
