--- a/about.html
+++ b/about.html
@@ -27,81 +27,112 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"> Viktoriia Semchyshyna </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="index.html"
-                title="homepage"
-                >Home
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="about.html"
-                title="about me"
-                >About me</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="contact.html"
-                title="contact "
-                >Contact me</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <h3 class="text-center">Front-end developer from Kharkiv, Ukraine 💙💛</h3>
-    <div class="about-paragraphs text-center">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-      </p>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <h2>My Project</h2>
-          <img src="img/weather.png" class="img-fluid p-2 shadow rounded" />
-          <a href="https://coruscating-kashata-8db5a9.netlify.app/"
-            >https://coruscating-kashata-8db5a9.netlify.app/</a
+    <div class="wrapper">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"> Viktoriia Semchyshyna </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
           >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="index.html"
+                  title="homepage"
+                  >Home
+                </a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="about.html"
+                  title="about me"
+                  >About me</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="contact.html"
+                  title="contact "
+                  >Contact me</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="col-sm-4">
-          <img src="img/" class="img-fluid p-2 shadow rounded" />
-        </div>
-        <div class="col-sm-4">
-          <img
-            src="img/1certificate.png"
-            class="img-fluid p-2 shadow rounded"
-          />
+      </nav>
+      <h3 class="text-center">
+        Front-end developer from Kharkiv, Ukraine 💙💛
+      </h3>
+      <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+          aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+          alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+          blanditiis harum.
+      </p>
+      <h2>My Project</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <img src="img/weather.png" class="img-fluid p-2 shadow rounded" />
+            <div class="navigation-links">
+              <a
+                href="https://coruscating-kashata-8db5a9.netlify.app/"
+                class="contact-link"
+                >Launch Weather APP
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <img src="img/croasan.png" class="img-fluid p-2 shadow rounded" />
+            <div class="navigation-links">
+              <a
+                href="https://rococo-churros-e75f29.netlify.app/"
+                class="contact-link"
+                >Launch Croissant APP
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <img src="img/pandora.png" class="img-fluid p-2 shadow rounded" />
+            <div class="navigation-links">
+              <a
+                href="https://coruscating-kashata-8db5a9.netlify.app/"
+                class="contact-link"
+                >Launch Weather APP
+              </a>
+            </div>
+          </div>
         </div>
       </div>
+     <div class="footer mt-4 text-center row justify-content-around">
+        <div class="name col-md-3 align-self-center">💛💙</div>
+        <div class="social col-md-3">
+          <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+          -
+          <a href="https://www.facebook.com/avijust.viki" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          -
+          <a href="https://github.com/VikiSemch/Portfolio-VikiSemch" target="_blank"><i class="fa-brands fa-github"></i></a>
+          -
+          <a href="https://www.linkedin.com/in/vikisemch" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <div class="developer col-md-3 align-self-center">
+          Viktoriia Semchyshyna
+        </div>
     </div>
   </body>
 </html>
