--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </head>
 
   <body>
+    <div class="wrapper">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Viktoriia Semchyshyna</a>
@@ -75,16 +76,17 @@
           </div>
         </div>
       </nav>
-      <div class="page1">
-      <h3>​💙💛 Front-end developer, based in Ukraine</h3>
+      <div class="main-container">
+       <h3>​💙💛 Front-end developer, based in Ukraine</h3>
     <div class="Meinfo">
+       
       <div class="container-me">
         <div class="row">
           <div class="col-md-6">
             <img src="img/me.jpg" class="img-fluid p-2 shadow rounded" alt="myphoto" width="300"/>
-           <p><strong>Name:</strong>Semchyshyna Viktoriia
+           <h5><strong>Name:</strong>Semchyshyna Viktoriia
            </br>
-           <strong>Age:</strong> 34 year</p>
+           <strong>Age:</strong> 34 year</h5>
         </div> 
           <div class="col-md-6">
             <p>
@@ -104,13 +106,13 @@
           </div>
         </div>
         <div class="navigation-links">
-          <a href="about.html#contact" class="contact-link">Contact me</a>
+          <a href="contact.html" class="contact-link">Contact me</a>
           <a href="about.html" class="about-link">About me</a>
         </div>
       </div>
       </div>
       <div id="certificates" class="certificates">
-     <h6>My certificates</h6>
+     <h3>My certificates</h3>
      <div class="row">
         <div class="col-md-6">
           <img src="img/1certificate.png" alt="course" class="cert-img-fluid rounded pb-40" width="440" height="320">
@@ -120,5 +122,21 @@
         </div>
       </div>
      </div>
+        <div class="footer mt-4 text-center row justify-content-around">
+        <div class="name col-md-3 align-self-center">💛💙</div>
+        <div class="social col-md-3">
+          <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+          -
+          <a href="https://www.facebook.com/avijust.viki" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          -
+          <a href="https://github.com/VikiSemch/Portfolio-VikiSemch" target="_blank"><i class="fa-brands fa-github"></i></a>
+          -
+          <a href="https://www.linkedin.com/in/vikisemch" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <div class="developer col-md-3 align-self-center">
+          Viktoriia Semchyshyna
+        </div>
+      </div></div>
+      </div>
   </body>
 </html>
