--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
      <h3>My certificates</h3>
      <div class="row">
         <div class="col-md-6">
-          <img src="img/1certificate.png" alt="course" class="cert-img-fluid rounded pb-40" width="440" height="320">
+          <img src="img/1certificate.png" alt="course" class="img-fluid rounded pb-40" width="440" height="320">
         </div>
         <div class="col-md-6">
-          <img src="img/2Certificate.png" alt="course" class="cert-img-fluid rounded pb-40" width="440" height="320">
+          <img src="img/2Certificate.png" alt="course" class="img-fluid rounded pb-40" width="440" height="320">
         </div>
       </div>
      </div>
