--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
         </div>
       </div>
      </div>
-        <div class="footer mt-4 text-center row justify-content-around">
+        </div>
+        <footer>
+        <div class="d-flex mt-4 text-center row justify-content-around">
         <div class="name col-md-3 align-self-center">💛💙</div>
         <div class="social col-md-3">
           <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"><i class="fa-brands fa-instagram"></i></a>
@@ -136,7 +138,8 @@
         <div class="developer col-md-3 align-self-center">
           Viktoriia Semchyshyna
         </div>
-      </div></div>
+      </div>
+    </footer>
       </div>
   </body>
 </html>
