--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
   </head>
   <body>
     <div class="wrapper">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"> Viktoriia Semchyshyna </a>
+          <a class="navbar-brand" href="#">Viktoriia Semchyshyna</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -59,8 +59,8 @@
                   aria-current="page"
                   href="about.html"
                   title="about me"
-                  >About me</a
-                >
+                  >About me
+                </a>
               </li>
               <li class="nav-item">
                 <a
@@ -68,8 +68,8 @@
                   aria-current="page"
                   href="contact.html"
                   title="contact "
-                  >Contact me</a
-                >
+                  >Contact me
+                </a>
               </li>
             </ul>
           </div>
@@ -119,7 +119,8 @@
           </div>
         </div>
       </div>
-     <div class="footer mt-4 text-center row justify-content-around">
+     <footer>
+        <div class="d-flex mt-4 text-center row justify-content-around">
         <div class="name col-md-3 align-self-center">💛💙</div>
         <div class="social col-md-3">
           <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"><i class="fa-brands fa-instagram"></i></a>
@@ -133,6 +134,8 @@
         <div class="developer col-md-3 align-self-center">
           Viktoriia Semchyshyna
         </div>
+      </div>
+    </footer>
     </div>
   </body>
 </html>
