--- a/contact.html
+++ b/contact.html
@@ -28,76 +28,89 @@
   </head>
   <body>
     <div class="wrapper">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"> Viktoriia Semchyshyna </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"> Viktoriia Semchyshyna </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="index.html"
+                  title="homepage"
+                  >Home
+                </a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="about.html"
+                  title="about me"
+                  >About me</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="contact.html"
+                  title="contact "
+                  >Contact me</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div id="contact" class="mt-5">
+        <h2 class="text-center">📮 Contact me</h2>
+        <a
+          href="mailto:Avijustviki@gmail.com"
+          class="email-link 💙💛 Front-end developer in Ukraine"
         >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="index.html"
-                title="homepage"
-                >Home
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="about.html"
-                title="about me"
-                >About me</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="contact.html"
-                title="contact "
-                >Contact me</a
-              >
-            </li>
-          </ul>
-        </div>
+          Avijustviki@gmail.com <i class="fa-brands fa-instagram"></i>
+        </a>
       </div>
-    </nav>
-    <div id="contact" class="mt-5">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a
-        href="mailto:Avijustviki@gmail.com"
-        class="email-link 💙💛 Front-end developer in Ukraine"
-      >
-        Avijustviki@gmail.com <i class="fa-brands fa-instagram"></i>
-      </a>
-      <div class="footer mt-4 text-center row justify-content-around">
-        <div class="name col-md-3 align-self-center">💛💙</div>
-        <div class="social col-md-3">
-          <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-          -
-          <a href="https://www.facebook.com/avijust.viki" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-          -
-          <a href="https://github.com/VikiSemch/Portfolio-VikiSemch" target="_blank"><i class="fa-brands fa-github"></i></a>
-          -
-          <a href="https://www.linkedin.com/in/vikisemch" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+      <footer>
+        <div class="d-flex mt-4 text-center row justify-content-around">
+          <div class="name col-md-3 align-self-center">💛💙</div>
+          <div class="social col-md-3">
+            <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            -
+            <a href="https://www.facebook.com/avijust.viki" target="_blank"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            -
+            <a
+              href="https://github.com/VikiSemch/Portfolio-VikiSemch"
+              target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            -
+            <a href="https://www.linkedin.com/in/vikisemch" target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </div>
+          <div class="developer col-md-3 align-self-center">
+            Viktoriia Semchyshyna
+          </div>
         </div>
-        <div class="developer col-md-3 align-self-center">
-          Viktoriia Semchyshyna
-        </div>
-    </div>
+      </footer>
     </div>
   </body>
 </html>
