--- a/index.html
+++ b/index.html
@@ -77,69 +77,95 @@
         </div>
       </nav>
       <div class="main-container">
-       <h3>​💙💛 Front-end developer, based in Ukraine</h3>
-    <div class="Meinfo">
-       
-      <div class="container-me">
-        <div class="row">
-          <div class="col-md-6">
-            <img src="img/me.jpg" class="img-fluid p-2 shadow rounded" alt="myphoto" width="300"/>
-           <h5><strong>Name:</strong>Semchyshyna Viktoriia
-           </br>
-           <strong>Age:</strong> 34 year</h5>
-        </div> 
-          <div class="col-md-6">
-            <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum.
-          </p>
+        <h3>
+          Hi! I am Viktoriia Semchyshyna ​💙💛 Front-end developer, based in
+          Ukraine
+        </h3>
+        <div class="Meinfo">
+          <div class="container-me">
+            <div class="row">
+              <div class="col-md-6">
+                <img
+                  src="img/me.jpg"
+                  class="img-fluid img-thumbnail shadow"
+                  alt="myphoto"
+                  width="400"
+                />
+              </div>
+              <div class="col-md-6">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Numquam aperiam provident tempora? Cumque adipisci, non
+                  dolorem quia, odit qui alias veniam excepturi rem dolor fugit
+                  dignissimos, sed voluptatum blanditiis harum. Lorem ipsum
+                  dolor sit amet, consectetur adipisicing elit. Numquam aperiam
+                  provident tempora? Cumque adipisci, non dolorem quia, odit qui
+                  alias veniam excepturi rem dolor fugit dignissimos, sed
+                  voluptatum blanditiis harum. Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit. Numquam aperiam provident
+                  tempora? Cumque adipisci, non dolorem quia, odit qui alias
+                  veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+                  blanditiis harum.
+                </p>
+                <div class="navigation-links">
+                  <a href="contact.html" class="contact-link">Contact me</a>
+                  <a href="about.html" class="about-link">About me</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="navigation-links">
-          <a href="contact.html" class="contact-link">Contact me</a>
-          <a href="about.html" class="about-link">About me</a>
+        <div id="certificates" class="certificates">
+          <h3>My certificates</h3>
+          <div class="row">
+            <div class="col-md-6">
+              <img
+                src="img/1certificate.png"
+                alt="course"
+                class="img-fluid img-thumbnail shadow"
+                width="440"
+                height="400"
+              />
+            </div>
+            <div class="col-md-6">
+              <img
+                src="img/2Certificate.png"
+                alt="course"
+                class="img-fluid img-thumbnail shadow"
+                width="440"
+                height="400"
+              />
+            </div>
+          </div>
         </div>
       </div>
-      </div>
-      <div id="certificates" class="certificates">
-     <h3>My certificates</h3>
-     <div class="row">
-        <div class="col-md-6">
-          <img src="img/1certificate.png" alt="course" class="img-fluid rounded pb-40" width="440" height="320">
+      <footer>
+        <div class="d-flex mt-2 text-center row justify-content-between">
+          <div class="name col-md-3 align-self-center">💛💙</div>
+          <div class="social col-md-3">
+            <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            -
+            <a href="https://www.facebook.com/avijust.viki" target="_blank"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            -
+            <a
+              href="https://github.com/VikiSemch/Portfolio-VikiSemch"
+              target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            -
+            <a href="https://www.linkedin.com/in/vikisemch" target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </div>
+          <div class="developer col-md-3 align-self-center">
+            Viktoriia Semchyshyna
+          </div>
         </div>
-        <div class="col-md-6">
-          <img src="img/2Certificate.png" alt="course" class="img-fluid rounded pb-40" width="440" height="320">
-        </div>
-      </div>
-     </div>
-        </div>
-        <footer>
-        <div class="d-flex mt-4 text-center row justify-content-around">
-        <div class="name col-md-3 align-self-center">💛💙</div>
-        <div class="social col-md-3">
-          <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-          -
-          <a href="https://www.facebook.com/avijust.viki" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-          -
-          <a href="https://github.com/VikiSemch/Portfolio-VikiSemch" target="_blank"><i class="fa-brands fa-github"></i></a>
-          -
-          <a href="https://www.linkedin.com/in/vikisemch" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-        </div>
-        <div class="developer col-md-3 align-self-center">
-          Viktoriia Semchyshyna
-        </div>
-      </div>
-    </footer>
-      </div>
+      </footer>
+    </div>
   </body>
 </html>
