--- a/about.html
+++ b/about.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Viktoriia Semchyshyna 💙💛 Front-end developer Ukraine</title>
+    <title>Viktoriia Semchyshyna 💙💛 Front-end developer Ukraine</title>
     <meta
       name="description"
       content="💙💛 Front-end developer, based in Ukraine"
     />
+    <link rel="stylesheet" href="style.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
     <script
       src="https://kit.fontawesome.com/7e2ce3d588.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+
     <div class="wrapper">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
@@ -78,14 +78,7 @@
       <h3 class="text-center">
         Front-end developer from Kharkiv, Ukraine 💙💛
       </h3>
-      <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-          aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-          alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-          blanditiis harum.
-      </p>
-      <h2>My Project</h2>
-      <div class="container">
+      <div class="container-project">
         <div class="row">
           <div class="col-sm-4">
             <img src="img/weather.png" class="img-fluid p-2 shadow rounded" />
@@ -98,6 +91,15 @@
             </div>
           </div>
           <div class="col-sm-4">
+            <h2>My Project</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+              aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+              qui alias veniam excepturi rem dolor fugit dignissimos, sed
+              voluptatum blanditiis harum.
+            </p>
+          </div>
+          <div class="col-sm-4">
             <img src="img/croasan.png" class="img-fluid p-2 shadow rounded" />
             <div class="navigation-links">
               <a
@@ -107,6 +109,9 @@
               </a>
             </div>
           </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4"></div>
           <div class="col-sm-4">
             <img src="img/pandora.png" class="img-fluid p-2 shadow rounded" />
             <div class="navigation-links">
@@ -117,25 +122,34 @@
               </a>
             </div>
           </div>
+          <div class="col-sm-4"></div>
         </div>
       </div>
-     <footer>
-        <div class="d-flex mt-4 text-center row justify-content-around">
-        <div class="name col-md-3 align-self-center">💛💙</div>
-        <div class="social col-md-3">
-          <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <div class="footer d-flex text-center row justify-content-between">
+        <div class="name col-sm-4 align-self-center">💛💙</div>
+        <div class="social col-sm-4">
+          <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
           -
-          <a href="https://www.facebook.com/avijust.viki" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.facebook.com/avijust.viki" target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
           -
-          <a href="https://github.com/VikiSemch/Portfolio-VikiSemch" target="_blank"><i class="fa-brands fa-github"></i></a>
+          <a
+            href="https://github.com/VikiSemch/Portfolio-VikiSemch"
+            target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
           -
-          <a href="https://www.linkedin.com/in/vikisemch" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/vikisemch" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </div>
-        <div class="developer col-md-3 align-self-center">
+        <div class="developer col-sm-4 align-self-center">
           Viktoriia Semchyshyna
         </div>
       </div>
-    </footer>
     </div>
   </body>
 </html>
