--- a/contact.html
+++ b/contact.html
@@ -75,13 +75,13 @@
           </div>
         </div>
       </nav>
-      <div id="contact" class="mt-5">
+      <div class="Contact">
         <h2 class="text-center">📮 Contact me</h2>
         <a
           href="mailto:Avijustviki@gmail.com"
           class="email-link 💙💛 Front-end developer in Ukraine"
         >
-          Avijustviki@gmail.com <i class="fa-brands fa-instagram"></i>
+          Avijustviki@gmail.com
         </a>
       </div>
       <footer>
@@ -102,7 +102,9 @@
               ><i class="fa-brands fa-github"></i
             ></a>
             -
-            <a href="https://www.linkedin.com/in/vikisemch" target="_blank"
+            <a
+              href="https://www.linkedin.com/in/vikisemch-099881241/"
+              target="_blank"
               ><i class="fa-brands fa-linkedin"></i
             ></a>
           </div>
