--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
       </nav>
       <div class="main-container">
-        <h3>
+        <h3 class="text-center">
           Hi! I am Viktoriia Semchyshyna ​💙💛 Front-end developer, based in
           Ukraine
         </h3>
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div id="certificates" class="certificates">
-          <h3>My certificates</h3>
+          <h2 class="text-center">My certificates</h2>
           <div class="row">
             <div class="col-md-6">
               <img
