--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <h2>My Project</h2>
+            <h2 class="text-center">My Project</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
               aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
@@ -125,28 +125,28 @@
           <div class="col-sm-4"></div>
         </div>
       </div>
-      <div class="footer d-flex text-center row justify-content-between">
-        <div class="name col-sm-4 align-self-center">💛💙</div>
-        <div class="social col-sm-4">
-          <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
-          -
-          <a href="https://www.facebook.com/avijust.viki" target="_blank"
-            ><i class="fa-brands fa-facebook"></i
-          ></a>
-          -
-          <a
-            href="https://github.com/VikiSemch/Portfolio-VikiSemch"
-            target="_blank"
-            ><i class="fa-brands fa-github"></i
-          ></a>
-          -
-          <a href="https://www.linkedin.com/in/vikisemch" target="_blank"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
+      <div class="footer mt-4 p-0 m-0 text-center row justify-content-around">
+        <div class="name col-md-3  p-0 m-0 align-self-center">💛💙</div>
+        <div class="social col-md-3 p-0 m-0 ">
+           <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            -
+            <a href="https://www.facebook.com/avijust.viki" target="_blank"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            -
+            <a
+              href="https://github.com/VikiSemch/Portfolio-VikiSemch"
+              target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            -
+            <a href="https://www.linkedin.com/in/vikisemch" target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
         </div>
-        <div class="developer col-sm-4 align-self-center">
+        <div class="developer col-md-3 p-0 m-0 align-self-center">
           Viktoriia Semchyshyna
         </div>
       </div>
