--- a/contact.html
+++ b/contact.html
@@ -4,33 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Viktoriia Semchyshyna 💙💛 Front-end developer Ukraine</title>
+    <title>Viktoriia Semchyshyna 💙💛 Front-end developer Ukraine</title>
     <meta
       name="description"
       content="💙💛 Front-end developer, based in Ukraine"
     />
+    <link rel="stylesheet" href="style.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
     <script
       src="https://kit.fontawesome.com/7e2ce3d588.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+
+  <body class="fon">
     <div class="wrapper">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"> Viktoriia Semchyshyna </a>
+          <a class="navbar-brand" href="#">Viktoriia Semchyshyna</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -59,8 +60,8 @@
                   aria-current="page"
                   href="about.html"
                   title="about me"
-                  >About me</a
-                >
+                  >About me
+                </a>
               </li>
               <li class="nav-item">
                 <a
@@ -68,8 +69,8 @@
                   aria-current="page"
                   href="contact.html"
                   title="contact "
-                  >Contact me</a
-                >
+                  >Contact me
+                </a>
               </li>
             </ul>
           </div>
@@ -85,7 +86,7 @@
         </a>
       </div>
       <footer>
-        <div class="d-flex mt-2 text-center row justify-content-around">
+        <div class="d-flex mt-2 text-center row justify-content-between">
           <div class="name col-md-3 align-self-center">💛💙</div>
           <div class="social col-md-3">
             <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"
@@ -102,9 +103,7 @@
               ><i class="fa-brands fa-github"></i
             ></a>
             -
-            <a
-              href="https://www.linkedin.com/in/vikisemch-099881241/"
-              target="_blank"
+            <a href="https://www.linkedin.com/in/vikisemch" target="_blank"
               ><i class="fa-brands fa-linkedin"></i
             ></a>
           </div>
