--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     ></script>
   </head>
 
-  <body class="fon">
+  <body>
     <div class="wrapper">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
@@ -77,41 +77,42 @@
         </div>
       </nav>
       <div class="Contact">
-        <h2 class="text-center">📮 Contact me</h2>
-        <a
-          href="mailto:Avijustviki@gmail.com"
-          class="email-link 💙💛 Front-end developer in Ukraine"
-        >
-          Avijustviki@gmail.com
-        </a>
-      </div>
-      <footer>
-        <div class="d-flex mt-2 text-center row justify-content-between">
-          <div class="name col-md-3 align-self-center">💛💙</div>
-          <div class="social col-md-3">
-            <a href="https://instagram.com/vikisemch?r=nametag" target="_blank"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
-            -
-            <a href="https://www.facebook.com/avijust.viki" target="_blank"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
-            -
-            <a
-              href="https://github.com/VikiSemch/Portfolio-VikiSemch"
-              target="_blank"
-              ><i class="fa-brands fa-github"></i
-            ></a>
-            -
-            <a href="https://www.linkedin.com/in/vikisemch" target="_blank"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
-          </div>
-          <div class="developer col-md-3 align-self-center">
-            Viktoriia Semchyshyna
-          </div>
+              <h2 class="text-center">📮 Contact me</h2>
+          <a
+            href="mailto:Avijustviki@gmail.com"
+            class="email-link 💙💛 Front-end developer in Ukraine"
+          >
+            Avijustviki@gmail.com
+          </a>
         </div>
-      </footer>
+        <footer>
+          <div class="d-flex mt-2 text-center row justify-content-between">
+            <div class="name col-md-3 align-self-center">💛💙</div>
+            <div class="social col-md-3">
+              <a
+                href="https://instagram.com/vikisemch?r=nametag"
+                target="_blank"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              -
+              <a href="https://www.facebook.com/avijust.viki" target="_blank"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+              -
+              <a
+                href="https://github.com/VikiSemch/Portfolio-VikiSemch"
+                target="_blank"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+              -
+              <a href="https://www.linkedin.com/in/vikisemch" target="_blank"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+            </div>
+            <div class="developer col-md-3 align-self-center">
+              Viktoriia Semchyshyna
+            </div>
+        </footer>
     </div>
   </body>
 </html>
